# sam-ba-den-web-system

./: .gitignore  Huong_Dan_Chay_Landing_Page.docx  Huong_Dan_Duong_Link_Website.docx  Huong_Dan_Duong_Link_Website.md  README.md  docker-compose.yml  docx_content.txt  docx_links.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_images.py  pyproject.toml  requirements.txt  seed_crm.py
backend/alembic/: env.py
backend/alembic/versions/: 3b11e4c15fb8_add_product_prices_inventory.py  407d506b6033_add_orders_tables.py  6fe7c2197b3c_create_dealer_tables.py  bd7a925aa1b3_add_qrcode_and_traceability.py  e4b618158cdb_create_crm_tables.py  init_schema.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  blog.py  contact.py  customer.py  dealer.py  dealer_discount.py  dealer_ledger.py  interaction.py  lead.py  opportunity.py  order.py  payment.py  product.py  qrcode.py  user.py
backend/app/repositories/: blog_repository.py  contact.py  product_repository.py  user_repository.py
backend/app/schemas/: auth.py  blog.py  common.py  contact.py  crm.py  dealer.py  order.py  portal.py  product.py  qrcode.py  rbac.py
backend/app/services/: auth_service.py  blog_service.py  crm_service.py  dealer_service.py  export_service.py  order_service.py  portal_service.py  product_service.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_blog.py  test_crm.py  test_dealers.py  test_portal.py  test_product.py  test_qrcode.py  test_rbac.py  test_vnpay.py
(+112 files in other folders)
